# strmtst

./: CHANGELOG.md  LICENSE  README.md  stack.yaml  strmtst.cabal
.stack-work/: stack.sqlite3
app/: Main.hs
